# espresso

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
cli/: espresso.py
kernel/: Cargo.toml  build.rs  linker.ld
kernel/asm/: switch.S
kernel/src/: arch.rs  caps.rs  deploy.rs  device_registry.rs  display.rs  driver.rs  editor.rs  event_log.rs  forth.rs  gpio.rs  host_proto.rs  ipc.rs  keyboard.rs  loader.rs  main.rs  pal.rs  panic_policy.rs  pkg.rs  scheduler.rs  shell.rs  syscall.rs  tty.rs  vfs.rs  wdt.rs
kernel/src/arch/: xtensa.rs
kernel/src/drivers/: delay.rs  i2c.rs  sd.rs  spi.rs  uart.rs
kernel/src/mem/: pool.rs
kernel/src/scheduler/: schedule.rs
programs/edit/: Makefile  edit.c
programs/forth_frontend/: Makefile  forth.c
sdk/: emit_espr.py  espr.ld
