[workspace]
members = ["kernel"]
resolver = "2"

[profile.release]
opt-level = "s"       # Optimize for size
lto = false             # Disable Link-Time Optimization to prevent LLVM register allocator crash
codegen-units = 1      # Reduce codegen units to improve optimization
panic = "abort"        # Abort on panic
